--- a/src/main/resources/templates/index_1.html
+++ b/src/main/resources/templates/index_1.html
@@ -1,16 +1,22 @@
 <!DOCTYPE html>
-<-<!-- Las páginas HMTL son las "vistas" de los controladores, son las que se 
+<!-- Las páginas HMTL son las "vistas" de los controladores, son las que se 
 muestran al usuario y solamente funcionan en la carpeta templates o plantillas-->
-<html xmlns:th="http://www.thymeleaf.org">
+<html xmlns:th="http://www.thymeleaf.org">  <!-- Con ésta etiqueta se hace el  
+    llamado a la librería thymeleaf la cual es una biblioteca Java que implementa
+    un motor de plantillas XML/XHTML/HTML5 que pueden extenderse en modos web.-->
     <head>
         <title>TechShop</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
     <body>
-        <header th:replace="layout/plantilla :: header"/>
+        <header th:replace="layout/plantilla :: header"/><!-- Ruta de la plantilla 
+        y luego el nombre de la plantilla a utilizar-->
         <h2>Listado de Clientes</h2>
-        <a th:href="@{/nuevoCliente}">Nuevo Cliente</a>
+        <a th:href="@{/nuevoCliente}">Nuevo Cliente</a> <!-- Los modelos se llaman 
+        en las vistas por medio de una expresión lambda (función que no está vinculada 
+        a un identificador): ${objeto del modelo}. Esto lo que hace es pasar una
+        variable por medio del model.-->
         <div th:if="${clientes != null and !clientes.empty}">
             <table border="1">
                 <thead>
