--- a/src/main/resources/templates/personas.html
+++ b/src/main/resources/templates/personas.html
@@ -1,19 +1,42 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
     <head>
-        <title>TODO supply a title</title>
+        <title>Personas</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
     <body>
         <h1 th:text="${titulo}"></h1>
-        <table>
-            <th:block th:each="user : ${personas}">
+        <a th:href="@{/nuevaPersona}">Nueva Persona</a>
+        <table border="1">
+            <thead>
                 <tr>
+                    <th>Nombre</th>
+                    <th>Primer Apellido</th>
+                    <th>Segundo Apellido</th>
+                    <th>Email</th>
+                    <th>Teléfono</th>
+                    <th>Modificar</th>
+                    <th>Eliminar</th>
+                </tr>
+            </thead>
+            <tbody>
+                <th:block th:each="user : ${personas}">
+                <tr>
+                    <td th:text="${user.getNombre}"></td>
                     <td th:text="${user.getApellido1}"></td>
+                    <td th:text="${user.getApellido2}"></td>
                     <td th:text="${user.getEmail}"></td>
+                    <td th:text="${user.getTelefono}"></td>
+                    <td>
+                        <a th:href="@{/eliminarPersona/{id}(id=${user.getId})}">Eliminar</a>
+                    </td>
+                    <td>
+                        <a th:href="@{/modificarPersona/{id}(id=${user.getId})}">Modificar</a>
+                    </td>
                 </tr>
             </th:block>
+            </tbody>
         </table>
     </body>
 </html>
