--- a/src/main/resources/templates/modificarPersona.html
+++ b/src/main/resources/templates/modificarPersona.html
@@ -1,11 +1,8 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
-    <head>
-        <title>Personas</title>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    </head>
+    <head th:replace="plantilla/template::head"></head>
     <body>
+        <header th:replace="plantilla/template::header"></header>
         <h2>Datos de Persona</h2>
         <a th:href="@{/personas}">Regresar</a>
             <form th:action="@{/guardarPersona}" method="post" th:object="${persona}">
@@ -26,9 +23,13 @@
                 <input type="email" name="correo" th:field="*{email}"/>
                 <br/>
                 <label for="pais">País: </label>
-                <input type="text" name="pais" th:field="*{pais}"/>
+                <select th:field="*{pais}">
+                    <option th:each="objeto:${paises}" th:value="${objeto.id}"
+                            th:text="${objeto.pais}"/>
+                </select>
                 <br/>
                 <input type="submit" name="guardar" value="Guardar"/>       
             </form> 
+        <footer th:replace="plantilla/template::footer"></footer>
     </body>
 </html>
