--- a/src/main/resources/templates/personas.html
+++ b/src/main/resources/templates/personas.html
@@ -16,8 +16,9 @@
                     <th>Segundo Apellido</th>
                     <th>Email</th>
                     <th>Teléfono</th>
-                    <th>Modificar</th>
+                    <th>Pais</th>
                     <th>Eliminar</th>
+                    <th>Modificar</th>
                 </tr>
             </thead>
             <tbody>
@@ -28,6 +29,7 @@
                     <td th:text="${user.getApellido2}"></td>
                     <td th:text="${user.getEmail}"></td>
                     <td th:text="${user.getTelefono}"></td>
+                    <td th:text="${user.getPais.getPais}"></td>
                     <td>
                         <a th:href="@{/eliminarPersona/{id}(id=${user.getId})}">Eliminar</a>
                     </td>
