Serie de Videos de Semana 8 mejorando el proyecto con asociasiones + CSS

--- a/src/main/resources/templates/categoria/listado.html
+++ b/src/main/resources/templates/categoria/listado.html
@@ -6,34 +6,39 @@ muestran al usuario y solamente funcionan en la carpeta templates o plantillas--
     un motor de plantillas XML/XHTML/HTML5 que pueden extenderse en modos web.-->
     <head>
         <title>TechShop</title>
-        <meta charset="UTF-8"/>
+        <meta charset="UTF-8">
         <link href="/css/menu.css" rel="stylesheet" type="text/css"/>
     </head>
     <body>
         <header th:replace="layout/plantilla :: header"/><!-- Ruta de la plantilla 
         y luego el nombre de la plantilla a utilizar-->
         <div class="contenido">
-        <h2>Nuestros Artículos</h2>
-        <div th:if="${articulos != null and !articulos.empty}">
+        <h2>Listado de Categorias</h2>
+        <a th:href="@{/categoria/nuevo}">Nueva Categoria</a> <!-- Los modelos se llaman 
+        en las vistas por medio de una expresión lambda (función que no está vinculada 
+        a un identificador): ${objeto del modelo}. Esto lo que hace es pasar una
+        variable por medio del model.-->
+        <div th:if="${categorias != null and !categorias.empty}">
             <table border="1">
                 <thead>
                     <tr>
                         <th>Descripcion</th>
-                        <th>Precio</th>
-                        <th>Comprar</th>
+                        <th>Activa</th>
                     </tr>
                 </thead>
                 <tbody>
-                    <tr th:each="articulo:${articulos}">
-                        <td th:text="${articulo.descripcion}"></td>
-                        <td th:text="${articulo.precio}"></td>
-                        <td><a th:href="@{/carrito/agregar/} + ${atriculo.idarticulo}">Agregar</a></td>
+                    <tr th:each="categoria:${categorias}">
+                        <td th:text="${categoria.descripcion}"></td>
+                        <td><input type="checkbox" name="activo" th:checked="${categoria.activo}" 
+                                   disabled="true"></td>
+                        <td><a th:href="@{/categoria/modificar/} + ${categoria.idcategoria}">Modificar</a></td>
+                        <td><a th:href="@{/categoria/eliminar/} + ${categoria.idcategoria}">Eliminar</a></td>
                     </tr>
                 </tbody>
             </table>
         </div>
-        <div th:if="${articulos  != null or articulos.empty}">
-            No tenemos lista de articulos que mostrar...
+        <div th:if="${categorias != null or categorias.empty}">
+            No tenemos lista de categorias que mostrar...
         </div>
         </div>
         <footer th:replace="layout/plantilla :: footer"/>
