--- a/src/main/resources/templates/cliente/modificar.html
+++ b/src/main/resources/templates/cliente/modificar.html
@@ -1,18 +1,19 @@
 <!DOCTYPE html>
-<-<!-- Las páginas HMTL son las "vistas" de los controladores, son las que se 
+<!-- Las páginas HMTL son las "vistas" de los controladores, son las que se 
 muestran al usuario y solamente funcionan en la carpeta templates o plantillas-->
 <html xmlns:th="http://www.thymeleaf.org" xmlns="http://www.w3.org/1999/xhtml">
     <head>
         <title>TechShop</title>
         <meta charset="UTF-8"/>
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link href="/css/menu.css" rel="stylesheet" type="text/css"/>
     </head>
     <body>
         <header th:replace="layout/plantilla :: header"/>
-        <h2>Datos de Cliente</h2>
-        <a th:href="@{/index_1}">Regresar</a>
+        <div class="contenido">
+            <h2>Datos de Cliente</h2>
+        <a th:href="@{/cliente/listado}">Regresar</a>
         <br/>
-            <form th:action="@{/guardarCliente}" method="post" th:object="${cliente}">
+            <form th:action="@{/cliente/guardar}" method="post" th:object="${cliente}">
                 <input type="hidden" name="idcliente" th:field="*{idcliente}"/>
                 <label for="nombre">Nombre: </label>
                 <input type="text" name="nombre" th:field="*{nombre}"/>
@@ -24,10 +25,14 @@ muestran al usuario y solamente funcionan en la carpeta templates o plantillas--
                 <input type="email" name="email" th:field="*{correo}"/>
                 <br/>
                 <label for="telefono">Teléfono: </label>
-                <input type="tel" name="telefono" th:field="*{telefono}"/>
+                <input type="tel" name="limite" th:field="*{credito.limite}"/>
                 <br/>
+                <label for="limite">Limite de Crédito: </label>
+                <input type="number" name="telefono" th:field="*{telefono}"/>
+                <br/><br/>
                 <button type="submit" value="Guardar">Guardar</button>       
             </form>  
+        </div>
         <footer th:replace="layout/plantilla :: footer"/>
     </body>
 </html>
