--- a/src/main/resources/templates/layout/plantilla.html
+++ b/src/main/resources/templates/layout/plantilla.html
@@ -5,10 +5,23 @@
         <meta charset="UTF-8"/>
     </head>
     <body>
-        <header th:fragment="header">
-            <h1>TechShop</h1>
+        <header th:fragment="header" class="header"><!-- Etiqueta para ofrecerle al navegador información de que es 
+            un encabezado, mediente un atributo se está llamando al selector de 
+            una hoja de estilos en CSS-->
+            <nav class="nav"><!-- Esta etiqueta es para ilustrarle al navegador que es un menú -->
+                <a th:href="@{/}" class="logo nav-link">TechShop</a>
+                <ul class="nav-menu">
+                    <li class="nav-menu-item"><a class="nav-menu-link nav-link" 
+                        th:href="@{cliente/listado}">Clientes</a></li><!-- Enlaces de referencia dentro del 
+                     mismo sitio, es una etiqueta de hipervínculo, href: hipervinculo reference-->
+                    <li class="nav-menu-item"><a class="nav-menu-link nav-link" 
+                        th:href="@{categoria/listado}">Categorias</a></li>
+                    <li class="nav-menu-item"><a class="nav-menu-link nav-link" 
+                        th:href="@{articulo/listado}">Articulos</a></li>
+                </ul>
+            </nav>
         </header>
-        <footer th:fragment="footer">
+        <footer th:fragment="footer" class="footer">
             <p>&COPY Derechos Reservados 2022</p>
         </footer>
     </body>
