--- a/src/main/resources/templates/categoria/modificar.html
+++ b/src/main/resources/templates/categoria/modificar.html
@@ -10,18 +10,18 @@ muestran al usuario y solamente funcionan en la carpeta templates o plantillas--
     <body>
         <header th:replace="layout/plantilla :: header"/>
         <div class="contenido">
-            <h2>Datos de Categoria</h2>
-        <a th:href="@{/categoria/listado}">Regresar</a>
+            <h2 th:text="#{categoria.datos}">Datos de Cliente</h2>
+        <a th:href="@{/categoria/listado}" th:text="#{accion.regresar}">Regresar</a>
         <br/>
             <form th:action="@{/categoria/guardar}" method="post" th:object="${categoria}">
                 <input type="hidden" name="idcategoria" th:field="*{idcategoria}"/>
-                <label for="descripcion">Descripcion: </label>
+                <label for="descripcion" th:text="#{categoria.descripcion}">Descripcion: </label>
                 <input type="text" name="Descripcion" th:field="*{descripcion}"/>
                 <br/>
-                <label for="activa">Activa: </label>
+                <label for="activa" th:text="#{categoria.activo}">Activa: </label>
                 <input type="checkbox" name="activo" th:field="*{activo}"/>
                 <br/><br/>
-                <button type="submit" value="Guardar">Guardar</button>       
+                <button type="submit" value="Guardar" th:text="#{accion.guardar}">Guardar</button>       
             </form>  
         </div>
         <footer th:replace="layout/plantilla :: footer"/>
