--- a/src/main/resources/templates/cliente/modificar.html
+++ b/src/main/resources/templates/cliente/modificar.html
@@ -10,27 +10,28 @@ muestran al usuario y solamente funcionan en la carpeta templates o plantillas--
     <body>
         <header th:replace="layout/plantilla :: header"/>
         <div class="contenido">
-            <h2>Datos de Cliente</h2>
-        <a th:href="@{/cliente/listado}">Regresar</a>
+            <h2 th:text="#{cliente.datos}">Datos de Cliente</h2>
+        <a th:href="@{/cliente/listado}" th:text="#{accion.regresar}">Regresar</a>
         <br/>
             <form th:action="@{/cliente/guardar}" method="post" th:object="${cliente}">
                 <input type="hidden" name="idcliente" th:field="*{idcliente}"/>
-                <label for="nombre">Nombre: </label>
+                <label for="nombre" th:text="#{cliente.nombre}">Nombre: </label>
                 <input type="text" name="nombre" th:field="*{nombre}"/>
                 <br/>
-                <label for="apellidos">Apellidos: </label>
+                <label for="apellidos" th:text="#{cliente.apellidos}">Apellidos: </label>
                 <input type="text" name="apellidos" th:field="*{apellidos}"/>
                 <br/>
-                <label for="email">Correo: </label>
+                <label for="email" th:text="#{cliente.correo}">Correo: </label>
                 <input type="email" name="email" th:field="*{correo}"/>
                 <br/>
-                <label for="telefono">Teléfono: </label>
+                <label for="telefono" th:text="#{cliente.telefono}">Teléfono: </label>
                 <input type="tel" name="limite" th:field="*{credito.limite}"/>
                 <br/>
-                <label for="limite">Limite de Crédito: </label>
+                <label for="limite" th:text="#{cliente.limite}">Limite de Crédito: </label>
                 <input type="number" name="telefono" th:field="*{telefono}"/>
                 <br/><br/>
-                <button type="submit" value="Guardar">Guardar</button>       
+                <button type="submit" value="Guardar" th:text="#{accion.guardar}">
+                    Guardar</button>       
             </form>  
         </div>
         <footer th:replace="layout/plantilla :: footer"/>
