--- a/src/main/resources/templates/layout/plantilla.html
+++ b/src/main/resources/templates/layout/plantilla.html
@@ -11,18 +11,25 @@
             <nav class="nav"><!-- Esta etiqueta es para ilustrarle al navegador que es un menú -->
                 <a th:href="@{/}" class="logo nav-link">TechShop</a>
                 <ul class="nav-menu">
-                    <li class="nav-menu-item"><a class="nav-menu-link nav-link" 
-                        th:href="@{cliente/listado}">Clientes</a></li><!-- Enlaces de referencia dentro del 
-                     mismo sitio, es una etiqueta de hipervínculo, href: hipervinculo reference-->
-                    <li class="nav-menu-item"><a class="nav-menu-link nav-link" 
-                        th:href="@{categoria/listado}">Categorias</a></li>
-                    <li class="nav-menu-item"><a class="nav-menu-link nav-link" 
-                        th:href="@{articulo/listado}">Articulos</a></li>
+                    <li class="nav-menu-item">
+                        <a th:href="@{cliente/listado}" class="nav-menu-link nav-link" 
+                        th:text="#{plantilla.clientes}">Clientes</a></li><!-- 
+                            Enlaces de referencia dentro del mismo sitio, es una 
+                            etiqueta de hipervínculo, href: hipervinculo reference-->
+                    <li class="nav-menu-item">
+                        <a th:href="@{categoria/listado}" class="nav-menu-link nav-link" 
+                        th:text="#{plantilla.categorias}">Categorias</a></li>
+                    <li class="nav-menu-item">
+                        <a th:href="@{articulo/listado}" class="nav-menu-link nav-link" 
+                        th:text="#{plantilla.articulos}">Articulos</a></li>
                 </ul>
             </nav>
         </header>
         <footer th:fragment="footer" class="footer">
-            <p>&COPY Derechos Reservados 2022</p>
+            <p>&COPY [[#{plantilla.derechos}]]
+                <a th:href="@{/(lang=es)}">ES</a> | /*"lang=es"= Lenguaje = Español*/
+                <a th:href="@{/(lang=en)}">EN</a>   /*"lang=es"= Lenguaje = Inglés*/
+            </p>
         </footer>
     </body>
 </html>
