--- a/src/main/resources/templates/categoria/listado.html
+++ b/src/main/resources/templates/categoria/listado.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <!-- Las páginas HMTL son las "vistas" de los controladores, son las que se 
 muestran al usuario y solamente funcionan en la carpeta templates o plantillas-->
-<html xmlns:th="http://www.thymeleaf.org">  <!-- Con ésta etiqueta se hace el  
+<html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org"
+      xmlns:sec="http://thymeleaf.org/extras/spring-security">  <!-- Con ésta etiqueta se hace el  
     llamado a la librería thymeleaf la cual es una biblioteca Java que implementa
     un motor de plantillas XML/XHTML/HTML5 que pueden extenderse en modos web.-->
     <head>
