--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
-<html>
+<html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org"
+      xmlns:sec="http://thymeleaf.org/extras/spring-security">
     <head>
         <title>Shop Login</title>
         <link rel="stylesheet" href="css/login.css">
