--- a/src/main/resources/templates/modificarPersona.html
+++ b/src/main/resources/templates/modificarPersona.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org">
+<html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org"
+      xmlns:sec="http://thymeleaf.org/extras/spring-security">
     <head th:replace="plantilla/template::head"></head>
     <body>
         <header th:replace="plantilla/template::header"></header>
