--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -1,27 +1,62 @@
 <!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org"
-      xmlns:sec="http://thymeleaf.org/extras/spring-security">
-    <head>
-        <title>Shop Login</title>
-        <link rel="stylesheet" href="css/login.css">
-    </head>
+<html xmlns:th="http://www.thymeleaf.org">
+    <head th:replace="plantilla/template::head"></head>
     <body>
-        <div class="content">
-            <h1>Welcome</h1>
-            <form method="POST">
-                <div class="text_field">
-                    <input type="text" required>
-                    <label>Username</label>
+        <div class="container">
+            <div style="width:600px;margin-left: auto;margin-right: auto;margin-top:24px;padding: 24px;">
+                <div class="card">
+                    <div class="card-header">
+                        <i class="fa fa-user"></i> Please Login
+                    </div>
+                    <div class="card-block" style="padding: 24px;">
+                        <form name="f" th:action="@{/personas}" method="get">
+                            <fieldset>
+                                <!-- Thymeleaf + Spring Security error display -->
+                                <div th:if="${param.error}" class="alert alert-danger">
+                                    Invalid username and password.
+                                </div>
+
+
+
+                                <div th:if="${param.logout}" class="alert alert-success">
+                                    You have been logged out.
+                                </div>
+
+
+
+                                <!-- Login Controls -->
+                                <div class="form-group">
+                                    <label for="txtUsername">Username</label>
+                                    <input type="text" class="form-control" id="txtUsername" name="txtUsername"
+                                           placeholder="Username">
+                                </div>
+
+
+
+                                <div class="form-group">
+                                    <label for="txtPassword">Password</label>
+                                    <input type="password" class="form-control" id="txtPassword" name="txtPassword"
+                                           placeholder="Password">
+                                </div>
+
+
+
+                                <div class="form-check">
+                                    <input type="checkbox" class="form-check-input" id="checkRememberMe" name="checkRememberMe">
+                                    <label class="form-check-label" for="checkRememberMe">Remember me?</label>
+                                </div>
+
+
+
+                                <!-- Login Button -->
+                                <div class="form-actions" style="margin-top: 12px;">
+                                    <button type="submit" class="btn btn-success">Log in</button>
+                                </div>
+                            </fieldset>
+                        </form>
+                    </div>
                 </div>
-                <div class="text_field">
-                    <input type="password" required>
-                    <label>Password</label>
-                </div>
-                <input type="submit" value="Login">
-                <div class="signup_link">
-                    Not a member?<a href="">SignUp</a>
-                </div>
-            </form>
+            </div>
         </div>
     </body>
 </html>
