--- a/src/main/resources/templates/plantilla/template.html
+++ b/src/main/resources/templates/plantilla/template.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org"
-      xmlns:sec="http://thymeleaf.org/extras/spring-security">
+<html xmlns:th="http://www.thymeleaf.org"
+      xmlns:sec="http://thymeleaft.org/extras/spring-security">
     <head th:fragment="head">
         <title>Mi Tienda</title>
         <meta charset="UTF-8">
@@ -9,25 +9,50 @@
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.min.js" integrity="sha384-Atwg2Pkwv9vp0ygtn1JAojH0nYbwNJLPhwyoVbhoPwBhjQPR5VtM2+xf0Uwh9KtT" crossorigin="anonymous"></script>
     </head>
     <body>
+        <!-- NAV BAR -->
         <header th:fragment="header">
-            <ul class="nav">
-                <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="#">Active</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Link</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Link</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link disabled">Disabled</a>
-                </li>
-            </ul>
+            <nav class="navbar navbar-expand-lg navbar-light bg-light">
+                <a class="navbar-brand" href="#">Boot Security</a>
+
+
+
+                <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                    <ul class="navbar-nav mr-auto">
+                        <li class="nav-item">
+                            <a class="nav-link" href="#" th:href="@{~/index}"><i class="fa fa-home"></i>Home</a>
+                        </li>
+                        <li sec:authorize="isAuthenticated()" class="nav-item">
+                            <a class="nav-link" href="#" th:href="@{~/profile/index}">Profile</a>
+                        </li>
+                        <li sec:authorize="hasRole('ROLE_USER')" class="nav-item">
+                            <a class="nav-link" href="#" th:href="@{~/admin/index}">User</a>
+                        </li>
+                        <li sec:authorize="hasAnyRole('ROLE_ADMIN','ROLE_MANAGER')" class="nav-item">
+                            <a class="nav-link" href="#" th:href="@{~/management/index}">ADMIN</a>
+                        </li>
+                    </ul>
+                    <form class="form-inline my-2 my-lg-0" form-method="post" th:action="@{/logout}">
+                        <button sec:authorize="isAuthenticated()" class="btn btn-outline-danger my-2 my-sm-0 btn-sm" type="submit">Logout</button>
+                        <button sec:authorize="isAnonymous()" th:href="@{~/login}" class="btn btn-outline-info my-2 my-sm-0 btn-sm" type="submit">Login</button>
+                    </form>
+                </div>
+            </nav>
         </header>
-        <footer th:fragment="footer">
+
+
+
+        <!-- CONTENIDO -->
+
+
+
+        <div class="container"></div>
+
+
+
+        <!-- FOOTER -->
+        <footer th:fragment="footer" class="bg-dark text-white fixed-bottom">
             <div>
-                <p>Copyright Tienda &COPY; 2022</p>
+                <p>Copyright Tienda &copy; 2022</p>
             </div>
         </footer>
     </body>
