--- a/src/main/resources/templates/layout/plantilla.html
+++ b/src/main/resources/templates/layout/plantilla.html
@@ -34,7 +34,7 @@
         <footer th:fragment="footer" class="footer">
             <div>&COPY [[#{plantilla.derechos}]]
                 <a th:href="@{/(lang=es)}">ES</a> | /*"lang=es"= Lenguaje = Español*/
-                <a th:href="@{/(lang=en)}">EN</a> |  /*"lang=es"= Lenguaje = Inglés*/
+                <a th:href="@{/(lang=en)}">EN</a> |  /*"lang=en"= Lenguaje = Inglés*/
                 [[#{plantilla.tusuario}]]: <span sec:authentication="name">xx</span> |
                 [[#{plantilla.tusuario}]]: <span sec:authentication="principal.authorities">s</span>
                 <form method="POST" th:action="@{/logout}" style="display: inline">/*
